k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: library-service
  namespace: library


spec:

  selector:
    app: library-management


  ports:

  - port: 80
    targetPort: 8000


  type: ClusterIP
